<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="75"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/black"
        android:gravity="right|bottom"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="right|bottom"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_gravity=""/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/topoperator"
            android:text="@string/AC"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/square"
            android:onClick="operatorOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/topoperator"
            android:text="@string/square"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modulus"
            android:onClick="operatorOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/topoperator"
            android:text="@string/modulus"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/divide"
            android:onClick="operatorOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/rightoperator"
            android:text="@string/divide"
            android:textColor="@color/black"/>




        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/seven"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/eight"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/nine"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiply"
            android:onClick="operatorOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/rightoperator"
            android:text="@string/mult"
            android:textColor="@color/black"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:id="@+id/four"
            android:onClick="btnDigitClick"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/four"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/five"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/six"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus"
            android:onClick="operatorOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/rightoperator"
            android:text="@string/minus"
            android:textColor="@color/black"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/one"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/one"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:id="@+id/two"
            android:onClick="btnDigitClick"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/two"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/three"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus"
            android:onClick="operatorOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/rightoperator"
            android:text="@string/plus"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:id="@+id/zero"
            android:onClick="btnDigitClick"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/zero"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dot"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/dot"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/rightoperator"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>